Fix erros and swagger doc, add debug - Add debug and verbose - Fix swagger doc - Fix error in send task to workers - remove last ioutils
