# manager/utils/workerRequest.go
@@ -18,32 +18,32 @@ import (
 )
 
 // VerifyWorkersLoop checks and sets if the workers are UP infinitely.
-func VerifyWorkersLoop(db *sql.DB, config *ManagerConfig, verbose bool) {
+func VerifyWorkersLoop(db *sql.DB, config *ManagerConfig, verbose, debug bool) {
 	for {
-		go verifyWorkers(db, config, verbose)
+		go verifyWorkers(db, config, verbose, debug)
 		time.Sleep(5 * time.Second)
 	}
 }
 
 // verifyWorkers checks and sets if the workers are UP.
-func verifyWorkers(db *sql.DB, config *ManagerConfig, verbose bool) {
+func verifyWorkers(db *sql.DB, config *ManagerConfig, verbose, debug bool) {
 	// Get all UP workers from the database
-	workers, err := database.GetWorkerUP(db, verbose)
+	workers, err := database.GetWorkerUP(db, verbose, debug)
 	if err != nil {
-		log.Print(err)
+		log.Print("GetWorkerUP", err)
 	}
 
 	// Verify each worker
 	for _, worker := range workers {
-		err := verifyWorker(db, config, &worker, verbose)
+		err := verifyWorker(db, config, &worker, verbose, debug)
 		if err != nil {
-			log.Print(err)
+			log.Print("verifyWorker ", err)
 		}
 	}
 }
 
 // verifyWorker checks and sets if the worker is UP.
-func verifyWorker(db *sql.DB, config *ManagerConfig, worker *globalstructs.Worker, verbose bool) error {
+func verifyWorker(db *sql.DB, config *ManagerConfig, worker *globalstructs.Worker, verbose, debug bool) error {
 	var workerURL string
 	if transport, ok := config.ClientHTTP.Transport.(*http.Transport); ok {
 		if transport.TLSClientConfig != nil {
@@ -54,20 +54,20 @@ func verifyWorker(db *sql.DB, config *ManagerConfig, worker *globalstructs.Worke
 	} else {
 		workerURL = "http://" + worker.IP + ":" + worker.Port + "/status"
 	}
-	if verbose {
+	if debug {
 		log.Println("workerURL:", workerURL)
 	}
 	// Create an HTTP client and send a GET request to workerURL/status
 
 	req, err := http.NewRequest("GET", workerURL, nil)
 	if err != nil {
-		if verbose {
+		if debug {
 			log.Println("Failed to create request to:", workerURL, " error:", err)
 			log.Println("Delete worker:", worker.Name)
 		}
 
 		// If there is an error in creating the request, delete the worker from the database
-		err := database.RmWorkerName(db, worker.Name, verbose)
+		err := database.RmWorkerName(db, worker.Name, verbose, debug)
 		if err != nil {
 			return err
 		}
@@ -78,34 +78,34 @@ func verifyWorker(db *sql.DB, config *ManagerConfig, worker *globalstructs.Worke
 
 	resp, err := config.ClientHTTP.Do(req)
 	if err != nil {
-		if verbose {
+		if debug {
 			log.Println("Error making request:", err)
 		}
 		// If there is an error in making the request, assume worker is offline
-		count, err := database.GetWorkerDownCount(db, worker, verbose)
+		count, err := database.GetWorkerDownCount(db, worker, verbose, debug)
 		if err != nil {
 			return err
 		}
 		if count >= 3 {
 			// If worker has been offline for 3 or more cycles, set it as offline in database
-			err = database.SetWorkerUPto(false, db, worker, verbose)
+			err = database.SetWorkerUPto(false, db, worker, verbose, debug)
 			if err != nil {
 				return err
 			}
 			// Reset the count to 0
-			err = database.SetWorkerDownCount(0, db, worker, verbose)
+			err = database.SetWorkerDownCount(0, db, worker, verbose, debug)
 			if err != nil {
 				return err
 			}
 
 			// Set as 'failed' all workers tasks
-			err = database.SetTasksWorkerFailed(db, worker.Name, verbose)
+			err = database.SetTasksWorkerFailed(db, worker.Name, verbose, debug)
 			if err != nil {
 				return err
 			}
 		} else {
 			// If worker has been offline for less than 3 cycles, increment the count
-			err = database.AddWorkerDownCount(db, worker, verbose)
+			err = database.AddWorkerDownCount(db, worker, verbose, debug)
 			if err != nil {
 				return err
 			}
@@ -116,11 +116,10 @@ func verifyWorker(db *sql.DB, config *ManagerConfig, worker *globalstructs.Worke
 
 	// if response is not 200 error
 	if resp.StatusCode != http.StatusOK {
-		fmt.Printf("Error: Unexpected status code %d\n", resp.StatusCode)
-		return fmt.Errorf("error:", resp.Status)
+		return fmt.Errorf("Error: Unexpected status code:", resp.Status)
 	}
 	// If there is no error in making the request, assume worker is online
-	err = database.SetWorkerUPto(true, db, worker, verbose)
+	err = database.SetWorkerUPto(true, db, worker, verbose, debug)
 	if err != nil {
 		return err
 	}
@@ -128,21 +127,19 @@ func verifyWorker(db *sql.DB, config *ManagerConfig, worker *globalstructs.Worke
 	// Read the response body into a byte slice
 	body, err := io.ReadAll(resp.Body)
 	if err != nil {
-		log.Println("Error reading response body:", err)
-		return err
+		return fmt.Errorf("Error reading response body:", err)
 	}
 
 	// Unmarshal the JSON into a TaskResponse struct
 	var status globalstructs.WorkerStatus
 	err = json.Unmarshal(body, &status)
 	if err != nil {
-		log.Println("Error unmarshalling JSON:", err, body)
-		return err
+		return fmt.Errorf("Error unmarshalling JSON:", err)
 	}
 
 	// If worker status is not the same as stored in the DB, update the DB
 	if status.IddleThreads != worker.IddleThreads {
-		err := database.SetWorkerworkingTo(status.IddleThreads, db, worker.Name, verbose)
+		err := database.SetIddleThreadsTo(status.IddleThreads, db, worker.Name, verbose, debug)
 		if err != nil {
 			return err
 		}
@@ -153,7 +150,14 @@ func verifyWorker(db *sql.DB, config *ManagerConfig, worker *globalstructs.Worke
 }
 
 // SendAddTask sends a request to a worker to add a task.
-func SendAddTask(db *sql.DB, config *ManagerConfig, worker *globalstructs.Worker, task *globalstructs.Task, verbose bool) error {
+func SendAddTask(db *sql.DB, config *ManagerConfig, worker *globalstructs.Worker, task *globalstructs.Task, verbose, debug bool) error {
+	//Sustract 1 Iddle Thread in worker
+	err := database.SubtractWorkerIddleThreads1(db, worker.Name, verbose, debug)
+	if err != nil {
+		return err
+	}
+	// add 1 on callback
+
 	var workerURL string
 	if transport, ok := config.ClientHTTP.Transport.(*http.Transport); ok {
 		if transport.TLSClientConfig != nil {
@@ -177,8 +181,7 @@ func SendAddTask(db *sql.DB, config *ManagerConfig, worker *globalstructs.Worker
 	// Create a new POST request with JSON payload
 	req, err := http.NewRequest("POST", workerURL, bytes.NewBuffer(jsonData))
 	if err != nil {
-		log.Println("Error creating request:", err)
-		return err
+		return fmt.Errorf("Error creating request:", err)
 	}
 
 	// Add Authorization header
@@ -191,51 +194,67 @@ func SendAddTask(db *sql.DB, config *ManagerConfig, worker *globalstructs.Worker
 
 	resp, err := config.ClientHTTP.Do(req)
 	if err != nil {
-		log.Println("Error sending request:", err)
-		return err
+		return fmt.Errorf("Error sending request:", err)
 	}
 	defer resp.Body.Close()
 
 	// Check the response status
 	if resp.StatusCode == http.StatusOK {
-		if verbose {
+		if debug {
 			log.Println("POST request was successful")
 		}
+
+		if verbose {
+			log.Println("Send Task", task.ID, "to worker", worker.Name)
+		}
+
 		// Set the task and worker as working
-		err := database.SetTaskStatus(db, task.ID, "running", verbose)
+		err := database.SetTaskStatus(db, task.ID, "running", verbose, debug)
 		if err != nil {
 			return err
 		}
 
 		// Set task as executed
-		err = database.SetTaskExecutedAt(db, task.ID, verbose)
+		err = database.SetTaskExecutedAt(db, task.ID, verbose, debug)
 		if err != nil {
-			log.Println("Error SetTaskExecutedAt in request:", err)
-			return err
+			return fmt.Errorf("Error SetTaskExecutedAt in request:", err)
 		}
 
 		// Set workerName in DB and in object
-		err = database.SetTaskWorkerName(db, task.ID, worker.Name, verbose)
+		err = database.SetTaskWorkerName(db, task.ID, worker.Name, verbose, debug)
 		if err != nil {
-			log.Println("Error SetWorkerNameTask in request:", err)
-			return err
+			return fmt.Errorf("Error SetWorkerNameTask in request:", err)
 		}
 
-		//Add 1 to working worker
-		err = database.SubtractWorkerIddleThreads1(db, worker.Name, verbose)
-		if err != nil {
-			return err
+		if verbose {
+			log.Println("Task send successfully")
 		}
+
 	} else {
-		message := "POST request failed with status:" + resp.Status + ". worker problably working"
-		return fmt.Errorf(message)
+		if resp.StatusCode == 423 {
+
+			worker2, err := database.GetWorker(db, worker.Name, verbose, debug)
+			if err != nil {
+				return err
+			}
+
+			if verbose {
+				log.Println("Iddle worker2", worker2.IddleThreads)
+			}
+
+			message := "POST request failed with status: 423. Worker already working"
+			return fmt.Errorf(message)
+		} else {
+			return fmt.Errorf("POST request failed with status:", resp.Status)
+
+		}
 	}
 
 	return nil
 }
 
 // SendDeleteTask sends a request to a worker to stop and delete a task.
-func SendDeleteTask(db *sql.DB, config *ManagerConfig, worker *globalstructs.Worker, task *globalstructs.Task, verbose bool) error {
+func SendDeleteTask(db *sql.DB, config *ManagerConfig, worker *globalstructs.Worker, task *globalstructs.Task, verbose, debug bool) error {
 	var workerURL string
 	if transport, ok := config.ClientHTTP.Transport.(*http.Transport); ok {
 		if transport.TLSClientConfig != nil {
@@ -269,15 +288,15 @@ func SendDeleteTask(db *sql.DB, config *ManagerConfig, worker *globalstructs.Wor
 
 	// Check the response status
 	if resp.StatusCode == http.StatusOK {
-		if verbose {
+		if debug {
 			log.Println("POST request was successful")
 		}
 		// Set the task and worker as not working
-		err := database.SetTaskStatus(db, task.ID, "deleted", verbose)
+		err := database.SetTaskStatus(db, task.ID, "deleted", verbose, debug)
 		if err != nil {
 			return err
 		}
-		err = database.SubtractWorkerIddleThreads1(db, worker.Name, verbose)
+		err = database.SubtractWorkerIddleThreads1(db, worker.Name, verbose, debug)
 		if err != nil {
 			return err
 		}
@@ -291,13 +310,13 @@ func SendDeleteTask(db *sql.DB, config *ManagerConfig, worker *globalstructs.Wor
 
 /*
 // SendGetTask sends a request to a worker to get the status of a task.
-func SendGetTask(db *sql.DB, OauthTokenWorkers string, worker *globalstructs.Worker, task globalstructs.Task, verbose bool) (globalstructs.Task, error) {
+func SendGetTask(db *sql.DB, OauthTokenWorkers string, worker *globalstructs.Worker, task globalstructs.Task, verbose, debug bool) (globalstructs.Task, error) {
 	return task, nil
 }
 */
 
 // CreateTLSClientWithCACert from cert.pem
-func CreateTLSClientWithCACert(caCertPath string, verifyAltName, verbose bool) (*http.Client, error) {
+func CreateTLSClientWithCACert(caCertPath string, verifyAltName, verbose, debug bool) (*http.Client, error) {
 	// Load CA certificate from file
 	caCert, err := os.ReadFile(caCertPath)
 	if err != nil {
