# worker/api/API.go
@@ -22,10 +22,10 @@ import (
 // HandleGetStatus handles the GET request to /status endpoint.
 // It checks if the OAuth token provided by the client matches the configured token.
 // If the token is valid, it returns the worker status as a JSON object.
-func HandleGetStatus(w http.ResponseWriter, r *http.Request, status *globalstructs.WorkerStatus, config *utils.WorkerConfig, verbose bool) {
+func HandleGetStatus(w http.ResponseWriter, r *http.Request, status *globalstructs.WorkerStatus, config *utils.WorkerConfig, verbose, debug bool) {
 	oauthKeyClient := r.Header.Get("Authorization")
 	if oauthKeyClient != config.OAuthToken {
-		if verbose {
+		if debug {
 			log.Println("{ \"error\" : \"Unauthorized\" }")
 		}
 		http.Error(w, "{ \"error\" : \"Unauthorized\" }", http.StatusUnauthorized)
@@ -38,7 +38,7 @@ func HandleGetStatus(w http.ResponseWriter, r *http.Request, status *globalstruc
 		return
 	}
 
-	if verbose {
+	if debug {
 		// Print the JSON data
 		log.Println(string(jsonData))
 	}
@@ -56,7 +56,7 @@ func HandleGetStatus(w http.ResponseWriter, r *http.Request, status *globalstruc
 // It checks if the OAuth token provided by the client matches the configured token.
 // If the token is valid, it processes the task in the background by calling the processTask function.
 // It immediately responds with the ID of the task.
-func HandleTaskPost(w http.ResponseWriter, r *http.Request, status *globalstructs.WorkerStatus, config *utils.WorkerConfig, verbose bool) {
+func HandleTaskPost(w http.ResponseWriter, r *http.Request, status *globalstructs.WorkerStatus, config *utils.WorkerConfig, verbose, debug bool) {
 	oauthKeyClient := r.Header.Get("Authorization")
 	if oauthKeyClient != config.OAuthToken {
 		http.Error(w, "{ \"error\" : \"Unauthorized\" }", http.StatusUnauthorized)
@@ -72,12 +72,12 @@ func HandleTaskPost(w http.ResponseWriter, r *http.Request, status *globalstruct
 	// Process TASK
 	// if executing task skip and return error
 	if status.IddleThreads <= 0 {
-		http.Error(w, "{ \"error\" : \"The worker is working\" }", http.StatusServiceUnavailable)
+		http.Error(w, "{ \"error\" : \"The worker is working\" }", http.StatusLocked)
 		return
 	}
 
 	// Process task in background
-	go processTask(status, config, &requestTask, verbose)
+	go processTask(status, config, &requestTask, verbose, debug)
 
 	// Respond immediately without waiting for the task to complete
 	w.Header().Set("Content-Type", "application/json")
@@ -88,7 +88,7 @@ func HandleTaskPost(w http.ResponseWriter, r *http.Request, status *globalstruct
 // HandleTaskDelete handles the DELETE request to /task/{ID} endpoint.
 // It checks if the OAuth token provided by the client matches the configured token.
 // If the token is valid, it stops/deletes the task with the given ID.
-func HandleTaskDelete(w http.ResponseWriter, r *http.Request, status *globalstructs.WorkerStatus, config *utils.WorkerConfig, verbose bool) {
+func HandleTaskDelete(w http.ResponseWriter, r *http.Request, status *globalstructs.WorkerStatus, config *utils.WorkerConfig, verbose, debug bool) {
 	oauthKeyClient := r.Header.Get("Authorization")
 	if oauthKeyClient != config.OAuthToken {
 		http.Error(w, "{ \"error\" : \"Unauthorized\" }", http.StatusUnauthorized)
@@ -109,7 +109,7 @@ func HandleTaskDelete(w http.ResponseWriter, r *http.Request, status *globalstru
 	err := cmd.Run()
 
 	if err != nil {
-		if verbose {
+		if debug {
 			fmt.Println("Error killing process:", err)
 			fmt.Println("Error details:", stderr.String())
 		}
@@ -125,7 +125,7 @@ func HandleTaskDelete(w http.ResponseWriter, r *http.Request, status *globalstru
 // HandleTaskGet handles the GET request to /task/{ID} endpoint.
 // It checks if the OAuth token provided by the client matches the configured token.
 // If the token is valid, it returns the details of the task with the given ID.
-func HandleTaskGet(w http.ResponseWriter, r *http.Request, status *globalstructs.WorkerStatus, config *utils.WorkerConfig, verbose bool) {
+func HandleTaskGet(w http.ResponseWriter, r *http.Request, status *globalstructs.WorkerStatus, config *utils.WorkerConfig, verbose, debug bool) {
 	oauthKeyClient := r.Header.Get("Authorization")
 	if oauthKeyClient != config.OAuthToken {
 		http.Error(w, "{ \"error\" : \"Unauthorized\" }", http.StatusUnauthorized)
@@ -152,15 +152,18 @@ func HandleTaskGet(w http.ResponseWriter, r *http.Request, status *globalstructs
 // Otherwise, it sets the task status to "done" and assigns the output of the module to the task.
 // Finally, it calls the CallbackTaskMessage function to send the task result to the configured callback endpoint.
 // After completing the task, it resets the worker status to indicate that it is no longer working.
-func processTask(status *globalstructs.WorkerStatus, config *utils.WorkerConfig, task *globalstructs.Task, verbose bool) {
+func processTask(status *globalstructs.WorkerStatus, config *utils.WorkerConfig, task *globalstructs.Task, verbose, debug bool) {
 	//Remove one from working threads
-	status.IddleThreads -= 1
+	sustract1IddleThreads(status)
+
+	//Add one from working threads
+	defer add1IddleThreads(status)
 
 	if verbose {
 		log.Println("Start processing task", task.ID, " workCount: ", status.IddleThreads)
 	}
 
-	err := modules.ProcessModule(task, config, status, task.ID, verbose)
+	err := modules.ProcessModule(task, config, status, task.ID, verbose, debug)
 	if err != nil {
 		log.Println("Error ProcessModule:", err)
 		task.Status = "failed"
@@ -170,7 +173,7 @@ func processTask(status *globalstructs.WorkerStatus, config *utils.WorkerConfig,
 
 	// While manager doesnt responds loop
 	for {
-		err = utils.CallbackTaskMessage(config, task, verbose)
+		err = utils.CallbackTaskMessage(config, task, verbose, debug)
 		if err == nil {
 			break
 		} else {
@@ -178,6 +181,12 @@ func processTask(status *globalstructs.WorkerStatus, config *utils.WorkerConfig,
 		}
 	}
 
-	//Add one from working threads
+}
+
+func add1IddleThreads(status *globalstructs.WorkerStatus) {
 	status.IddleThreads += 1
+}
+
+func sustract1IddleThreads(status *globalstructs.WorkerStatus) {
+	status.IddleThreads -= 1
 }
